kbd-chooser (0.41) UNRELEASED; urgency=low

  * Jeff Bailey
    - Applied patches for sun keyboard map.  (Closes: #227852)
      (Thanks to Thomas Poindessous <thomas@poindessous.com>)
  * Eugen Meshcheryakov : added Ukrainian translation (uk.po)
  * Alastair McKinstry
    - usb-kbd.c: Autodetect USB keyboard using devices file. Closes: #220137.

 -- Alastair McKinstry <mckinstry@debian.org>  Sun, 15 Feb 2004 20:52:30 +0000

kbd-chooser (0.40) unstable; urgency=low

  * Matt Kraai
    - Fix the backup button for the console-tools/archs template.
    - Quit if the user chooses not to configure the keyboard.
  * Joey Hess
    - Use po2debconf rather than hand-hackery in generating demo.templates.
  * Denis Barbier
    - Replace yes/no values by true/false in debian-installer/serial-console.
      Previous version did work, but using canonical values is less confusing.

  * Updated translations:
    - Andre Dahlqvist
      - Update Swedish translation sv.po
    - Peter Mann
      - Update Slovak translation
    - Miguel Figueiredo
      - Updated Portuguese translation (pt.po)
    - Giuseppe Sacco
      - applied patch for normalizing menus and some italian translation (it.po)
    - h3lios
      - Added Albanian translation (sq.po)
    - Jordi Mallach
      - Update Catalan translation (ca.po).

 -- Joey Hess <joeyh@debian.org>  Thu,  5 Feb 2004 14:48:15 -0500

kbd-chooser (0.39) unstable; urgency=low

  * Bartosz Fenski
    - Updated Polish (pl) translation.
  * Alastair McKinstry
    - Updated Irish (ga.po) translation.
  * Matt Kraai
    - Fix the capitalization of the menu entry.
  * Christian Perrier
    - Run debconf-updatepo after the above change
    - Unfuzzied translations after the above change
  * Joey Hess
    - Mention PS-2 in kbd-chooser/kbd/at.
  * Christian Perrier
    - Run debconf-updatepo after the above change
    - Updated french translation
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Bart Cornelis