@@ -6,6 +6,7 @@ kbd-chooser (0.41) UNRELEASED; urgency=low
   * Eugen Meshcheryakov : added Ukrainian translation (uk.po)
   * Alastair McKinstry
     - usb-kbd.c: Autodetect USB keyboard using devices file. Closes: #220137.
+    - Ignore keys that are invalid for 2.4 kernels. Closes: #229761.
 
  -- Alastair McKinstry <mckinstry@debian.org>  Sun, 15 Feb 2004 20:52:30 +0000
 
